+ Fixed table text alignment issue on mobile + Set account currency flag to hide on mobile

--- a/src/sass/static/pages.scss
+++ b/src/sass/static/pages.scss
@@ -161,6 +161,9 @@
         width: 80px;
         height: 80px;
         margin-right: 20px;
+        @media screen and (max-width: 500px) {
+            display: none;
+        }
     }
     &_current {
         color: $primaryBrandColor;
@@ -782,6 +785,7 @@ body #not_authenticated_financial ul.checked > li {
                         padding: 10px;
                         width: 40%;
                         width: calc(50% - 20px);
+                        text-align: left !important;
 
                         &:nth-child(2n) {
                             float: right;
